--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,17 @@
         {% endblock %}
     </head>
     <body>
+    {% if app.user %}
+        <a href="/city/">Города</a>
+        <a href="/vendor/">Поставщики</a>
+        <a href="/product/category">Категории продуктов</a>
+        <a href="/product/">Продукты</a>
+        <a href="/supply/">Поставки</a>
+        <a href="/logout">Выйти</a>
+    {% else %}
+        <a href="/login">Войти</a>
+        <a href="/register">Регистрация</a>
+    {% endif %}
         {% block body %}{% endblock %}
     </body>
 </html>
